[package]
name = "sieve"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
# Reth P2P stack (pinned to same rev as SHiNode)
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "a74cb9cbc38a5590b2596c67e64a3c7642024aca" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "a74cb9cbc38a5590b2596c67e64a3c7642024aca" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "a74cb9cbc38a5590b2596c67e64a3c7642024aca" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a74cb9cbc38a5590b2596c67e64a3c7642024aca", features = ["serde"] }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "a74cb9cbc38a5590b2596c67e64a3c7642024aca" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "a74cb9cbc38a5590b2596c67e64a3c7642024aca" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "a74cb9cbc38a5590b2596c67e64a3c7642024aca", features = ["secp256k1"] }

# Alloy (Ethereum types + ABI decoding)
alloy-primitives = "1.5.2"
alloy-rlp = "0.3.12"
alloy-consensus = { version = "1.4.3", features = ["serde"] }
alloy-dyn-abi = "1"
alloy-json-abi = "1"
alloy-sol-types = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# GraphQL API
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-graphql-axum = "7"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus-client = "0.22"
base64 = "0.22"

# HTTP client (webhook notifications)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# AMQP client (RabbitMQ streaming)
lapin = "2.5"

# Misc
eyre = "0.6"
parking_lot = "0.12"
bytes = "1"
tikv-jemallocator = { version = "0.5", optional = true }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
cognitive_complexity = "warn"
exit = "deny"
doc_markdown = "allow"
similar_names = "allow"
single_match_else = "allow"
unnecessary_wraps = "allow"
struct_field_names = "allow"
large_futures = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
significant_drop_tightening = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
